engine/test/electron/scripts/lexer/errors/unterminated_string_newline.e
// ERROR TEST: String with unescaped newline
"first line
second line"
